@@ -12,7 +12,6 @@ package org.zet.riptel.gui;
 
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
-import java.io.DataInputStream;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -25,6 +24,8 @@ import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.logging.Level;
@@ -82,7 +83,6 @@ public class GUI extends javax.swing.JFrame {
         btnExit = new javax.swing.JButton();
         btnExpFile = new javax.swing.JButton();
         jChk_DB = new javax.swing.JCheckBox();
-        pass_sudo = new javax.swing.JPasswordField();
         jSP_iptxt = new javax.swing.JScrollPane();
         txtIPs = new javax.swing.JTextArea();
         jSP_sstxt = new javax.swing.JScrollPane();
@@ -108,8 +108,9 @@ public class GUI extends javax.swing.JFrame {
         jLabel6 = new javax.swing.JLabel();
         jLabel7 = new javax.swing.JLabel();
         btn_Tel = new javax.swing.JButton();
-        lb_infoStatus = new javax.swing.JLabel();
         chb_liveTel = new javax.swing.JCheckBox();
+        lb_infoStatus = new javax.swing.JLabel();
+        pass_sudo = new javax.swing.JPasswordField();
 
         jD_DBcon.getContentPane().setLayout(new java.awt.GridLayout(1, 0));
 
@@ -231,28 +232,20 @@ public class GUI extends javax.swing.JFrame {
 
         jChk_DB.setText("DB Con");
 
-        pass_sudo.setBorder(javax.swing.BorderFactory.createTitledBorder("sudo"));
-        pass_sudo.setEnabled(false);
-        pass_sudo.setPreferredSize(new java.awt.Dimension(100, 31));
-
         javax.swing.GroupLayout pan_MainLayout = new javax.swing.GroupLayout(pan_Main);
         pan_Main.setLayout(pan_MainLayout);
         pan_MainLayout.setHorizontalGroup(
             pan_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(pan_MainLayout.createSequentialGroup()
                 .addContainerGap()
+                .addComponent(jChk_DB)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                 .addGroup(pan_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                     .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, pan_MainLayout.createSequentialGroup()
-                        .addComponent(jChk_DB)
-                        .addGap(0, 0, Short.MAX_VALUE))
-                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, pan_MainLayout.createSequentialGroup()
-                        .addGap(0, 0, Short.MAX_VALUE)
                         .addComponent(btnExpFile)
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                         .addComponent(btnExit, javax.swing.GroupLayout.PREFERRED_SIZE, 70, javax.swing.GroupLayout.PREFERRED_SIZE))
                     .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, pan_MainLayout.createSequentialGroup()
-                        .addComponent(pass_sudo, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                         .addComponent(btnStart, javax.swing.GroupLayout.PREFERRED_SIZE, 70, javax.swing.GroupLayout.PREFERRED_SIZE)
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                         .addComponent(btnStop, javax.swing.GroupLayout.PREFERRED_SIZE, 70, javax.swing.GroupLayout.PREFERRED_SIZE)))
@@ -264,19 +257,21 @@ public class GUI extends javax.swing.JFrame {
         pan_MainLayout.setVerticalGroup(
             pan_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(pan_MainLayout.createSequentialGroup()
-                .addGap(8, 8, 8)
-                .addGroup(pan_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
-                    .addComponent(btnExpFile)
+                .addGroup(pan_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                     .addGroup(pan_MainLayout.createSequentialGroup()
-                        .addComponent(jChk_DB)
-                        .addGap(18, 18, 18)
-                        .addGroup(pan_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(btnStop)
-                            .addComponent(btnStart)
-                            .addComponent(pass_sudo, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
-                        .addComponent(btnExit)))
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                        .addGap(8, 8, 8)
+                        .addComponent(jChk_DB))
+                    .addGroup(pan_MainLayout.createSequentialGroup()
+                        .addContainerGap()
+                        .addGroup(pan_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
+                            .addComponent(btnExpFile)
+                            .addGroup(pan_MainLayout.createSequentialGroup()
+                                .addGroup(pan_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                                    .addComponent(btnStop)
+                                    .addComponent(btnStart))
+                                .addGap(14, 14, 14)
+                                .addComponent(btnExit)))))
+                .addContainerGap(51, Short.MAX_VALUE))
         );
 
         pan_MainLayout.linkSize(javax.swing.SwingConstants.VERTICAL, new java.awt.Component[] {btnExit, btnExpFile, btnStart, btnStop});
@@ -354,7 +349,7 @@ public class GUI extends javax.swing.JFrame {
                 .addComponent(rdbC, javax.swing.GroupLayout.PREFERRED_SIZE, 30, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addComponent(rdbFR)
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addContainerGap(23, Short.MAX_VALUE))
         );
 
         pan_controlLayout.linkSize(javax.swing.SwingConstants.HORIZONTAL, new java.awt.Component[] {rdbA, rdbB, rdbC, rdbFR});
@@ -386,7 +381,7 @@ public class GUI extends javax.swing.JFrame {
                 .addGroup(jP_MainLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                     .addComponent(pan_Main, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                     .addComponent(jSP_sstxt, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, 356, javax.swing.GroupLayout.PREFERRED_SIZE)
-                    .addComponent(pan_control, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                    .addComponent(pan_control, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
                 .addContainerGap())
         );
         jP_MainLayout.setVerticalGroup(
@@ -398,8 +393,8 @@ public class GUI extends javax.swing.JFrame {
                     .addGroup(jP_MainLayout.createSequentialGroup()
                         .addComponent(jSP_sstxt, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                        .addComponent(pan_control, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                        .addComponent(pan_control, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                         .addComponent(pan_Main, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)))
                 .addContainerGap())
         );
@@ -452,8 +447,6 @@ public class GUI extends javax.swing.JFrame {
             }
         });
 
-        chb_liveTel.setText("LiveTel");
-
         javax.swing.GroupLayout jP_DBcontrolLayout = new javax.swing.GroupLayout(jP_DBcontrol);
         jP_DBcontrol.setLayout(jP_DBcontrolLayout);
         jP_DBcontrolLayout.setHorizontalGroup(
@@ -461,24 +454,24 @@ public class GUI extends javax.swing.JFrame {
             .addGroup(jP_DBcontrolLayout.createSequentialGroup()
                 .addGap(0, 0, 0)
                 .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addComponent(cb_DBIPs, javax.swing.GroupLayout.PREFERRED_SIZE, 140, javax.swing.GroupLayout.PREFERRED_SIZE)
-                    .addComponent(jLabel7)
                     .addGroup(jP_DBcontrolLayout.createSequentialGroup()
                         .addComponent(jB_Nmap)
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
-                        .addComponent(btn_Tel)))
-                .addGap(18, 18, 18)
-                .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
-                    .addComponent(jTF_User, javax.swing.GroupLayout.DEFAULT_SIZE, 115, Short.MAX_VALUE)
-                    .addComponent(jLabel5)
-                    .addComponent(lb_infoStatus, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
-                .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addComponent(jTF_Pass, javax.swing.GroupLayout.PREFERRED_SIZE, 115, javax.swing.GroupLayout.PREFERRED_SIZE)
-                    .addComponent(jLabel6)
-                    .addComponent(chb_liveTel))
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(jB_DBSubmit))
+                        .addComponent(btn_Tel)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                        .addComponent(jB_DBSubmit))
+                    .addGroup(jP_DBcontrolLayout.createSequentialGroup()
+                        .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                            .addComponent(cb_DBIPs, javax.swing.GroupLayout.PREFERRED_SIZE, 140, javax.swing.GroupLayout.PREFERRED_SIZE)
+                            .addComponent(jLabel7))
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                        .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                            .addComponent(jTF_User, javax.swing.GroupLayout.PREFERRED_SIZE, 115, javax.swing.GroupLayout.PREFERRED_SIZE)
+                            .addComponent(jLabel5))
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                        .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                            .addComponent(jTF_Pass, javax.swing.GroupLayout.PREFERRED_SIZE, 115, javax.swing.GroupLayout.PREFERRED_SIZE)
+                            .addComponent(jLabel6)))))
         );
 
         jP_DBcontrolLayout.linkSize(javax.swing.SwingConstants.HORIZONTAL, new java.awt.Component[] {btn_Tel, jB_DBSubmit, jB_Nmap});
@@ -496,34 +489,53 @@ public class GUI extends javax.swing.JFrame {
                     .addComponent(jTF_User, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                     .addComponent(jTF_Pass, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
-                .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
-                    .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
-                        .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
-                            .addComponent(jB_Nmap, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                            .addComponent(jB_DBSubmit, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                            .addComponent(btn_Tel, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-                        .addComponent(lb_infoStatus, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
-                    .addComponent(chb_liveTel))
-                .addContainerGap())
+                .addGroup(jP_DBcontrolLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE, false)
+                    .addComponent(jB_Nmap, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                    .addComponent(jB_DBSubmit, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                    .addComponent(btn_Tel, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addGap(0, 0, 0))
         );
 
         jP_DBcontrolLayout.linkSize(javax.swing.SwingConstants.VERTICAL, new java.awt.Component[] {btn_Tel, jB_DBSubmit, jB_Nmap});
+
+        chb_liveTel.setText("LiveTel");
+
+        pass_sudo.setBorder(javax.swing.BorderFactory.createTitledBorder("sudo"));
+        pass_sudo.setEnabled(false);
+        pass_sudo.setPreferredSize(new java.awt.Dimension(100, 31));
 
         javax.swing.GroupLayout jP_DBEntryLayout = new javax.swing.GroupLayout(jP_DBEntry);
         jP_DBEntry.setLayout(jP_DBEntryLayout);
         jP_DBEntryLayout.setHorizontalGroup(
             jP_DBEntryLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addComponent(jSP_telout, javax.swing.GroupLayout.PREFERRED_SIZE, 545, javax.swing.GroupLayout.PREFERRED_SIZE)
             .addGroup(jP_DBEntryLayout.createSequentialGroup()
-                .addContainerGap()
-                .addComponent(jP_DBcontrol, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                .addComponent(jSP_nmap, javax.swing.GroupLayout.PREFERRED_SIZE, 545, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addGap(0, 3, Short.MAX_VALUE))
+            .addGroup(jP_DBEntryLayout.createSequentialGroup()
+                .addGroup(jP_DBEntryLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                    .addGroup(jP_DBEntryLayout.createSequentialGroup()
+                        .addContainerGap()
+                        .addComponent(jP_DBcontrol, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                    .addGroup(jP_DBEntryLayout.createSequentialGroup()
+                        .addComponent(jSP_telout)
+                        .addGap(18, 18, 18)
+                        .addGroup(jP_DBEntryLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
+                            .addComponent(chb_liveTel)
+                            .addComponent(pass_sudo, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                            .addComponent(lb_infoStatus, javax.swing.GroupLayout.PREFERRED_SIZE, 100, javax.swing.GroupLayout.PREFERRED_SIZE))))
                 .addContainerGap())
-            .addComponent(jSP_nmap, javax.swing.GroupLayout.PREFERRED_SIZE, 545, javax.swing.GroupLayout.PREFERRED_SIZE)
         );
         jP_DBEntryLayout.setVerticalGroup(
             jP_DBEntryLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(jP_DBEntryLayout.createSequentialGroup()
-                .addComponent(jSP_telout, javax.swing.GroupLayout.PREFERRED_SIZE, 100, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addGroup(jP_DBEntryLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
+                    .addGroup(jP_DBEntryLayout.createSequentialGroup()
+                        .addComponent(chb_liveTel)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
+                        .addComponent(pass_sudo, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                        .addComponent(lb_infoStatus, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                    .addComponent(jSP_telout, javax.swing.GroupLayout.PREFERRED_SIZE, 100, javax.swing.GroupLayout.PREFERRED_SIZE))
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addComponent(jSP_nmap, javax.swing.GroupLayout.PREFERRED_SIZE, 123, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
@@ -580,8 +592,6 @@ public class GUI extends javax.swing.JFrame {
         if (isConn2DB()) {
             closeDB();
         }
-
-        //cancelWorker(worker);
         dispose();
         System.exit(0);
     }//GEN-LAST:event_btnExitActionPerformed
@@ -620,23 +630,22 @@ public class GUI extends javax.swing.JFrame {
             @Override
             protected Void doInBackground() throws Exception {
 
-                txtSys.setText("* " + worker.getState().toString() + " @ " + getDateTime() + "\n");
-                checkPrvMode();
-
-                //setnMapCmd(prepareNmapCmd(isPrvMode()));
-                cb_DBIPs.addItem("192.168.1.254");
-                connDB();
+                //txtSys.setText("* " + worker.getState().toString() + " @ " + getDateTime() + "\n");
+              
+                //cb_DBIPs.addItem("192.168.1.254");
+                
                 int ttl, th = 0;
 
                 do {
                     ++th;
-                    rand = new RIPT("Thread " + th);
+                    rand = new RIPT();
                     rand.setClsRng(setIPRng());
                     ttl = jS_TTL.getValue() * 1000;
                     rand.setTTL(ttl);
-                    rand.start();
+                    rand.run();
                     try {
-                        RIPT.sleep(ttl);
+                        //rand.sleep(ttl);
+                        Thread.sleep(ttl);
                         publish((String) rand.getIP());
                         //*** move to process
                         if (rand.getConStatus()) {
@@ -649,6 +658,7 @@ public class GUI extends javax.swing.JFrame {
                                 db.insMain(rand.getIP(), setIPRng());
                             }
                         }
+                        //rand.interrupt(); /*****************/
                     } catch (InterruptedException e) {
                         Logger.getLogger(GUI.class.getName()).log(Level.SEVERE, null, e);
                         break;
@@ -657,8 +667,9 @@ public class GUI extends javax.swing.JFrame {
                         stateDBbuttons(true);
                         btnExpFile.setEnabled(true);
                     }
-                } while (!isCancelled());
-                rand.interrupt();
+                } 
+                while (!isCancelled());
+                    //rand.interrupt();
                 return null;
             }
 
@@ -672,13 +683,17 @@ public class GUI extends javax.swing.JFrame {
 
             @Override
             protected void done() {
+                worker.cancel(true); 
+                workerThreadPool.shutdownNow();
+                
                 txtSys.append("* " + worker.getState().toString() + " @ " + getDateTime() + "\n");
                 txtSys.setCaretPosition(txtSys.getText().length());
                 btnStart.setEnabled(true);
                 btnStop.setEnabled(false);
                 //btnExit.setEnabled(true);
                 jChk_DB.setEnabled(true);
-                SWMExecutor.getInstance().terminate();
+                                              
+                //SWMExecutor.getInstance().terminate();
                 try {
                     worker.get(jS_TTL.getValue(), TimeUnit.SECONDS);
                 } catch (InterruptedException | ExecutionException | TimeoutException ex) {
@@ -686,11 +701,17 @@ public class GUI extends javax.swing.JFrame {
                 }
             }
         }
-
-        worker = new Worker();
-        //ExecutorService workerThreadPool = Executors.newFixedThreadPool(1);
-        //workerThreadPool.execute(worker);
-        SWMExecutor.getInstance().execute(worker);
+        
+        txtSys.setText(null);
+        connDB();
+        checkPrvMode();   
+        
+        worker = new Worker();   
+        workerThreadPool.execute(worker);
+        //SWMExecutor.getInstance().execute(worker);
+        
+        txtSys.append("* " + worker.getState().toString() + " @ " + getDateTime() + "\n");
+           
 
     }//GEN-LAST:event_btnStartActionPerformed
 
@@ -718,29 +739,7 @@ public class GUI extends javax.swing.JFrame {
             JOptionPane.showMessageDialog(jP_DBcon, "No DB connection !");
         }
     }//GEN-LAST:event_jB_DBSubmitActionPerformed
-    /*
-     private String[] prepareNmapCmd(boolean prvMode) {
-     String tmpIp = cb_DBIPs.getSelectedItem().toString();
-     //String tmpIp = "192.168.1.254";
-     char[] pas = pass_sudo.getPassword();
-     String nmScriptPath = getJarPath() + "/zetnm.sh";
-     //String nmScriptPath = "/home/zet/Desktop/My Projects/NetBeansProjects/RTL/resources/zetnm.sh";
-     String mode;
-     if (prvMode) {
-     mode = "1";
-     } else {
-     pass_sudo.setEnabled(true);
-     if ("".toString().equals(pas.toString())) {
-     mode = "0";
-     }else {
-     mode = "-1";
-     }
-     }
-     String[] nmCmd = {nmScriptPath, tmpIp, mode, pas.toString()};
-     return nmCmd;
-     }
-     */
-
+   
     private void prepareNmapCmd() {
 
         /*String nmScriptPath = "/home/zet/projects/NetBeansProjects/RTL/resources/scripts/zetnm.sh";
@@ -752,21 +751,23 @@ public class GUI extends javax.swing.JFrame {
 
         if (isPrvMode()) {
             String[] nMapCmd = {nmScriptPath, tmpIp, "1"};
-            execNmapCmd(nMapCmd);
+            execNmapCmd(nMapCmd, tmpIp);
         } else if ((!isPrvMode()) && ("".toString().equals(pass_sudo.getText()))) { //***** Original
             String[] nMapCmd = {nmScriptPath, tmpIp, "-1"};
-            execNmapCmd(nMapCmd);
+            execNmapCmd(nMapCmd, tmpIp);
         } else if ((!isPrvMode()) && !("".toString().equals(pass_sudo.getText()))) {
             String[] nMapCmd = {nmScriptPath, tmpIp, "0", pwd}; 
-            execNmapCmd(nMapCmd);
+            execNmapCmd(nMapCmd, tmpIp);
         }
     }
 
-    private void execNmapCmd(String[] nMapCmd) {
+    private void execNmapCmd(String[] nMapCmd, String tmpIp) {
         try {
             String displ_str;
 
-            Process proc = Runtime.getRuntime().exec(nMapCmd);
+            //Process proc = Runtime.getRuntime().exec(nMapCmd);
+            ProcessBuilder pb = new ProcessBuilder(nMapCmd);
+            Process proc = pb.redirectError(ProcessBuilder.Redirect.PIPE).redirectOutput(ProcessBuilder.Redirect.PIPE).start();
 
             BufferedReader stdIn = new BufferedReader(new InputStreamReader(proc.getInputStream()));
             BufferedReader stdEr = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
@@ -776,9 +777,11 @@ public class GUI extends javax.swing.JFrame {
                 stateDBbuttons(false);
             }
             while ((displ_str = stdEr.readLine()) != null) {
-                txtSys.append("*** nMap returned Error: " + displ_str + "\n");
+                txtSys.append("*** nMap [" + tmpIp + "] returned Error: " + displ_str + "\n");
             }
-        } catch (IOException ex) {
+            int exitValue = proc.waitFor();
+            txtSys.append("* Nmap [" + tmpIp + "] exit Value is " + exitValue + "\n");
+        } catch (InterruptedException | IOException ex) {
             Logger.getLogger(GUI.class.getName()).log(Level.SEVERE, null, ex);
         }
     }
@@ -799,7 +802,9 @@ public class GUI extends javax.swing.JFrame {
         }
         jTxt_nmap.setText("");
         cmdNwork = new CMDNWorker();
-        SWNExecutor.getInstance().execute(cmdNwork);
+        //SWNExecutor.getInstance().execute(cmdNwork);
+        workerThreadPool.execute(cmdNwork);
+        //nmEx.execute(cmdNwork);
     }//GEN-LAST:event_jB_NmapActionPerformed
 
     private void btn_TelActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_TelActionPerformed
@@ -835,7 +840,7 @@ public class GUI extends javax.swing.JFrame {
 
                     String[] execTelScriptStr = {telScriptPath, tmpIp};
                     ProcessBuilder pb = new ProcessBuilder(execTelScriptStr);
-                    Process procApp = pb.start();
+                    Process procApp = pb.redirectError(ProcessBuilder.Redirect.PIPE).redirectOutput(ProcessBuilder.Redirect.PIPE).start();
 
                     BufferedReader stdIn = new BufferedReader(new InputStreamReader(procApp.getInputStream()));
                     BufferedReader stdEr = new BufferedReader(new InputStreamReader(procApp.getErrorStream()));
@@ -848,18 +853,9 @@ public class GUI extends javax.swing.JFrame {
                     }
 
                     exitValue = procApp.waitFor();
-                    txtSys.append("** TelNet [" + tmpIp + "] exit Value is " + exitValue);
+                    txtSys.append("** TelNet [" + tmpIp + "] exit Value is " + exitValue + "\n");
 
                     //******** Add 60 seconds timeout then close proc
-
-                    /* 
-                     DataInputStream in = new DataInputStream(
-                     procApp.getInputStream());
-
-                     while ((disp_str = in.readLine()) != null) { //read chars ???
-                     jTxt_telOut.append(disp_str + "\n");
-                     /* Thread.sleep(500);
-                     stateDBbuttons(false); */
 
                     cancelWorker(cmdTwork);
                     stateDBbuttons(true);
@@ -869,7 +865,12 @@ public class GUI extends javax.swing.JFrame {
         }
         jTxt_telOut.setText("");
         cmdTwork = new CMDTWorker();
-        cmdTwork.execute();
+        //cmdTwork.execute();
+        workerThreadPool.execute(cmdTwork);
+        //SWMExecutor.getInstance().execute(cmdTwork);
+        
+        
+        
     }//GEN-LAST:event_btn_TelActionPerformed
 
     private void cb_DBIPsActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_cb_DBIPsActionPerformed
@@ -877,8 +878,7 @@ public class GUI extends javax.swing.JFrame {
     }//GEN-LAST:event_cb_DBIPsActionPerformed
 
     /**
-     * *****************************HELPER METHODS
-     * START********************************************
+     * *****************************HELPER METHODS START********************************************
      */
     private void checkPrvMode() {
         String uname = System.getProperty("user.name");
@@ -987,8 +987,7 @@ public class GUI extends javax.swing.JFrame {
     }
 
     /**
-     * ******************************HELPER METHODS
-     * END*****************************************
+     * ******************************HELPER METHODS END*****************************************
      */
     /**
      * @param args the command line arguments
@@ -1004,14 +1003,20 @@ public class GUI extends javax.swing.JFrame {
     /**
      * ****USER DEFINED VARIABLES*******
      */
+    private ExecutorService workerThreadPool = Executors.newFixedThreadPool(5);
+    private SwingWorker worker, cmdTwork, cmdNwork, fileExpW;
+    //private SWMExecutor telEx, nmEx;
+    
+    
     private RIPT rand;
     private DB_conn db;
-    private SwingWorker worker, cmdTwork, cmdNwork, fileExpW;
+   
     private ArrayList ipList = new ArrayList();
     private int tries, nsucc;
     private float ch;
     private boolean conn2DB = false, prvMode = false;
     private String[] nMapCmd = null;
+    
     // Variables declaration - do not modify//GEN-BEGIN:variables
     private javax.swing.JButton btnExit;
     private javax.swing.JButton btnExpFile;
